--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "4b1227eb",
    "metadata": {
     "id": "4b1227eb"
@@ -74,21 +74,21 @@
      "output_type": "stream",
      "text": [
       "fatal: destination path 'piper-sample-generator' already exists and is not an empty directory.\n",
-      "--2025-12-16 11:12:26--  https://github.com/rhasspy/piper-sample-generator/releases/download/v2.0.0/en_US-libritts_r-medium.pt\n",
-      "Resolving github.com (github.com)... 140.82.121.3\n",
-      "Connecting to github.com (github.com)|140.82.121.3|:443... connected.\n",
+      "--2025-12-21 22:39:53--  https://github.com/rhasspy/piper-sample-generator/releases/download/v2.0.0/en_US-libritts_r-medium.pt\n",
+      "Resolving github.com (github.com)... 140.82.121.4\n",
+      "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://release-assets.githubusercontent.com/github-production-release-asset/642029941/73f4af3c-7cf8-4547-a7b9-3bd29e7f3c33?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-12-16T11%3A00%3A49Z&rscd=attachment%3B+filename%3Den_US-libritts_r-medium.pt&rsct=application%2Foctet-stream&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-12-16T09%3A59%3A56Z&ske=2025-12-16T11%3A00%3A49Z&sks=b&skv=2018-11-09&sig=V5ybQ2unlAWWHPtH%2BTzR5eUg0BrP%2BhDkf%2BzQpT%2BT%2BCs%3D&jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc2NTg4MzU0NiwibmJmIjoxNzY1ODc5OTQ2LCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.CWse0mvFf7wKSQqftA0zZogpGUhWsKp0o1ys6dncYDA&response-content-disposition=attachment%3B%20filename%3Den_US-libritts_r-medium.pt&response-content-type=application%2Foctet-stream [following]\n",
-      "--2025-12-16 11:12:26--  https://release-assets.githubusercontent.com/github-production-release-asset/642029941/73f4af3c-7cf8-4547-a7b9-3bd29e7f3c33?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-12-16T11%3A00%3A49Z&rscd=attachment%3B+filename%3Den_US-libritts_r-medium.pt&rsct=application%2Foctet-stream&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-12-16T09%3A59%3A56Z&ske=2025-12-16T11%3A00%3A49Z&sks=b&skv=2018-11-09&sig=V5ybQ2unlAWWHPtH%2BTzR5eUg0BrP%2BhDkf%2BzQpT%2BT%2BCs%3D&jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc2NTg4MzU0NiwibmJmIjoxNzY1ODc5OTQ2LCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.CWse0mvFf7wKSQqftA0zZogpGUhWsKp0o1ys6dncYDA&response-content-disposition=attachment%3B%20filename%3Den_US-libritts_r-medium.pt&response-content-type=application%2Foctet-stream\n",
-      "Resolving release-assets.githubusercontent.com (release-assets.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
-      "Connecting to release-assets.githubusercontent.com (release-assets.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+      "Location: https://release-assets.githubusercontent.com/github-production-release-asset/642029941/73f4af3c-7cf8-4547-a7b9-3bd29e7f3c33?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-12-21T22%3A30%3A42Z&rscd=attachment%3B+filename%3Den_US-libritts_r-medium.pt&rsct=application%2Foctet-stream&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-12-21T21%3A30%3A33Z&ske=2025-12-21T22%3A30%3A42Z&sks=b&skv=2018-11-09&sig=VspxDUfqtl%2FHAq66CZSXzl0vrEXcPztne8z%2BoWH1ris%3D&jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc2NjM1Njc5NCwibmJmIjoxNzY2MzUzMTk0LCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.m3KwQlqIe1JhGuG_Oc5JIhGKB21ZTRrQB2jAhJdtKgQ&response-content-disposition=attachment%3B%20filename%3Den_US-libritts_r-medium.pt&response-content-type=application%2Foctet-stream [following]\n",
+      "--2025-12-21 22:39:54--  https://release-assets.githubusercontent.com/github-production-release-asset/642029941/73f4af3c-7cf8-4547-a7b9-3bd29e7f3c33?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-12-21T22%3A30%3A42Z&rscd=attachment%3B+filename%3Den_US-libritts_r-medium.pt&rsct=application%2Foctet-stream&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-12-21T21%3A30%3A33Z&ske=2025-12-21T22%3A30%3A42Z&sks=b&skv=2018-11-09&sig=VspxDUfqtl%2FHAq66CZSXzl0vrEXcPztne8z%2BoWH1ris%3D&jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc2NjM1Njc5NCwibmJmIjoxNzY2MzUzMTk0LCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.m3KwQlqIe1JhGuG_Oc5JIhGKB21ZTRrQB2jAhJdtKgQ&response-content-disposition=attachment%3B%20filename%3Den_US-libritts_r-medium.pt&response-content-type=application%2Foctet-stream\n",
+      "Resolving release-assets.githubusercontent.com (release-assets.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
+      "Connecting to release-assets.githubusercontent.com (release-assets.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 204089915 (195M) [application/octet-stream]\n",
       "Saving to: ‘piper-sample-generator/models/en_US-libritts_r-medium.pt’\n",
       "\n",
-      "piper-sample-genera 100%[===================>] 194.63M  86.1MB/s    in 2.3s    \n",
+      "piper-sample-genera 100%[===================>] 194.63M  54.9MB/s    in 3.5s    \n",
       "\n",
-      "2025-12-16 11:12:29 (86.1 MB/s) - ‘piper-sample-generator/models/en_US-libritts_r-medium.pt’ saved [204089915/204089915]\n",
+      "2025-12-21 22:39:57 (54.9 MB/s) - ‘piper-sample-generator/models/en_US-libritts_r-medium.pt’ saved [204089915/204089915]\n",
       "\n",
       "Requirement already satisfied: piper-phonemize in /opt/miniconda3/envs/wakeword2/lib/python3.11/site-packages (1.1.0)\n",
       "Requirement already satisfied: webrtcvad in /opt/miniconda3/envs/wakeword2/lib/python3.11/site-packages (2.0.10)\n",
@@ -123,8 +123,8 @@
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/miniconda3/envs/wakeword2/lib/python3.11/site-packages (from sympy->onnxruntime<2,>=1.10.0->openwakeword==0.6.0) (1.3.0)\n",
       "Building wheels for collected packages: openwakeword\n",
       "  Building editable for openwakeword (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for openwakeword: filename=openwakeword-0.6.0-0.editable-py3-none-any.whl size=17507 sha256=81543392431dfa067c756f96a1213838dd9526f37dfa27a251944e319eeb6bdb\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-bswh87dr/wheels/57/fa/4f/ae7e5a9b6d31256083f72a3778458495e3c7217dcf21b17990\n",
+      "\u001b[?25h  Created wheel for openwakeword: filename=openwakeword-0.6.0-0.editable-py3-none-any.whl size=17507 sha256=ba6dcb63b9f47b58d6fed2a747ff1af56168a7c56021fb2338ae9184f5a0de31\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-nkldqk12/wheels/57/fa/4f/ae7e5a9b6d31256083f72a3778458495e3c7217dcf21b17990\n",
       "Successfully built openwakeword\n",
       "Installing collected packages: openwakeword\n",
       "  Attempting uninstall: openwakeword\n",
@@ -414,7 +414,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mFileExistsError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# Download required models (workaround for Colab)\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m./openwakeword/openwakeword/resources/models\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     32\u001b[39m get_ipython().system(\u001b[33m'\u001b[39m\u001b[33mwget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/embedding_model.onnx -O ./openwakeword/openwakeword/resources/models/embedding_model.onnx\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     33\u001b[39m get_ipython().system(\u001b[33m'\u001b[39m\u001b[33mwget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/embedding_model.tflite -O ./openwakeword/openwakeword/resources/models/embedding_model.tflite\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# Download required models (workaround for Colab)\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m./openwakeword/openwakeword/resources/models\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     32\u001b[39m get_ipython().system(\u001b[33m'\u001b[39m\u001b[33mwget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/embedding_model.onnx -O ./openwakeword/openwakeword/resources/models/embedding_model.onnx\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     33\u001b[39m get_ipython().system(\u001b[33m'\u001b[39m\u001b[33mwget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/embedding_model.tflite -O ./openwakeword/openwakeword/resources/models/embedding_model.tflite\u001b[39m\u001b[33m'\u001b[39m)\n",
       "\u001b[36mFile \u001b[39m\u001b[32m<frozen os>:225\u001b[39m, in \u001b[36mmakedirs\u001b[39m\u001b[34m(name, mode, exist_ok)\u001b[39m\n",
       "\u001b[31mFileExistsError\u001b[39m: [Errno 17] File exists: './openwakeword/openwakeword/resources/models'"
      ]
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4f42814c",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d4c1056e",
    "metadata": {
     "ExecuteTime": {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d25a93b1",
    "metadata": {
     "ExecuteTime": {
@@ -566,9 +566,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading readme: 100%|██████████| 936/936 [00:00<00:00, 4.46MB/s]\n",
-      "Resolving data files: 100%|██████████| 270/270 [00:00<00:00, 311.26it/s]\n",
-      "270it [01:04,  4.21it/s]\n"
+      "Resolving data files: 100%|██████████| 270/270 [00:00<00:00, 442.39it/s]\n",
+      "270it [00:44,  6.12it/s]\n"
      ]
     }
    ],
@@ -589,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2c0e178b",
    "metadata": {
     "id": "2c0e178b"
@@ -599,11 +598,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-12-16 10:54:45--  https://huggingface.co/datasets/agkphysics/AudioSet/resolve/main/data/bal_train09.tar\n",
-      "Resolving huggingface.co (huggingface.co)... 52.222.136.117, 52.222.136.89, 52.222.136.38, ...\n",
-      "Connecting to huggingface.co (huggingface.co)|52.222.136.117|:443... connected.\n",
-      "HTTP request sent, awaiting response... 404 Not Found\n",
-      "2025-12-16 10:54:45 ERROR 404: Not Found.\n",
+      "--2025-12-21 22:42:29--  https://huggingface.co/datasets/agkphysics/AudioSet/resolve/main/data/bal_train09.tar\n",
+      "Resolving huggingface.co (huggingface.co)... 52.222.136.89, 52.222.136.117, 52.222.136.38, ...\n",
+      "Connecting to huggingface.co (huggingface.co)|52.222.136.89|:443... connected.\n",
+      "HTTP request sent, awaiting response... "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "404 Not Found\n",
+      "2025-12-21 22:42:29 ERROR 404: Not Found.\n",
       "\n",
       "tar: This does not look like a tar archive\n",
       "tar: Exiting with failure status due to previous errors\n"
@@ -614,9 +620,7 @@
      "output_type": "stream",
      "text": [
       "0it [00:00, ?it/s]\n",
-      "Downloading builder script: 46.3kB [00:00, 62.0MB/s]\n",
-      "Downloading readme: 100%|██████████| 25.0/25.0 [00:00<00:00, 152kB/s]\n",
-      " 99%|█████████▉| 119/120 [00:30<00:00,  3.94it/s]\n"
+      " 99%|█████████▉| 119/120 [00:24<00:00,  4.86it/s]\n"
      ]
     }
    ],
@@ -869,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "79e5d2d9",
    "metadata": {},
    "outputs": [
@@ -889,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f01531fa",
    "metadata": {
     "ExecuteTime": {
