changes to download cell to be robuster

--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -84,11 +84,11 @@
       "Connecting to release-assets.githubusercontent.com (release-assets.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 204089915 (195M) [application/octet-stream]\n",
-      "Saving to: ‘piper-sample-generator/models/en_US-libritts_r-medium.pt’\n",
+      "Saving to: \u2018piper-sample-generator/models/en_US-libritts_r-medium.pt\u2019\n",
       "\n",
       "piper-sample-genera 100%[===================>] 194.63M  54.9MB/s    in 3.5s    \n",
       "\n",
-      "2025-12-21 22:39:57 (54.9 MB/s) - ‘piper-sample-generator/models/en_US-libritts_r-medium.pt’ saved [204089915/204089915]\n",
+      "2025-12-21 22:39:57 (54.9 MB/s) - \u2018piper-sample-generator/models/en_US-libritts_r-medium.pt\u2019 saved [204089915/204089915]\n",
       "\n",
       "Requirement already satisfied: piper-phonemize in /opt/miniconda3/envs/wakeword2/lib/python3.11/site-packages (1.1.0)\n",
       "Requirement already satisfied: webrtcvad in /opt/miniconda3/envs/wakeword2/lib/python3.11/site-packages (2.0.10)\n",
@@ -566,7 +566,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Resolving data files: 100%|██████████| 270/270 [00:00<00:00, 442.39it/s]\n",
+      "Resolving data files: 100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 270/270 [00:00<00:00, 442.39it/s]\n",
       "270it [00:44,  6.12it/s]\n"
      ]
     }
@@ -620,7 +620,7 @@
      "output_type": "stream",
      "text": [
       "0it [00:00, ?it/s]\n",
-      " 99%|█████████▉| 119/120 [00:24<00:00,  4.86it/s]\n"
+      " 99%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2589| 119/120 [00:24<00:00,  4.86it/s]\n"
      ]
     }
    ],
@@ -636,11 +636,34 @@
     "if not os.path.exists(\"audioset\"):\n",
     "    os.mkdir(\"audioset\")\n",
     "\n",
+    "from huggingface_hub import hf_hub_download, list_repo_files\n",
+    "import tarfile\n",
+    "\n",
+    "repo_id = \"agkphysics/AudioSet\"\n",
+    "repo_type = \"dataset\"\n",
     "fname = \"bal_train09.tar\"\n",
-    "out_dir = f\"audioset/{fname}\"\n",
-    "link = \"https://huggingface.co/datasets/agkphysics/AudioSet/resolve/main/data/\" + fname\n",
-    "!wget -O {out_dir} {link}\n",
-    "!cd audioset && tar -xvf bal_train09.tar\n",
+    "candidate = f\"data/{fname}\"\n",
+    "\n",
+    "files = list_repo_files(repo_id, repo_type=repo_type)\n",
+    "if candidate not in files:\n",
+    "    matches = [f for f in files if f.startswith(\"data/\") and \"bal_train09\" in f]\n",
+    "    if matches:\n",
+    "        candidate = matches[0]\n",
+    "        fname = os.path.basename(candidate)\n",
+    "    else:\n",
+    "        raise FileNotFoundError(\n",
+    "            f\"{candidate} not found in {repo_id}.\"\n",
+    "        )\n",
+    "\n",
+    "tar_path = hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    repo_type=repo_type,\n",
+    "    filename=candidate,\n",
+    "    local_dir=\"audioset\",\n",
+    "    local_dir_use_symlinks=False,\n",
+    ")\n",
+    "with tarfile.open(tar_path, \"r\") as tar:\n",
+    "    tar.extractall(\"audioset\")\n",
     "\n",
     "output_dir = \"./audioset_16k\"\n",
     "if not os.path.exists(output_dir):\n",
@@ -692,11 +715,11 @@
       "Connecting to cas-bridge.xethub.hf.co (cas-bridge.xethub.hf.co)|18.245.60.30|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 17280000128 (16G)\n",
-      "Saving to: ‘openwakeword_features_ACAV100M_2000_hrs_16bit.npy’\n",
+      "Saving to: \u2018openwakeword_features_ACAV100M_2000_hrs_16bit.npy\u2019\n",
       "\n",
       "openwakeword_featur 100%[===================>]  16.09G   107MB/s    in 2m 37s  \n",
       "\n",
-      "2025-12-16 10:59:35 (105 MB/s) - ‘openwakeword_features_ACAV100M_2000_hrs_16bit.npy’ saved [17280000128/17280000128]\n",
+      "2025-12-16 10:59:35 (105 MB/s) - \u2018openwakeword_features_ACAV100M_2000_hrs_16bit.npy\u2019 saved [17280000128/17280000128]\n",
       "\n",
       "--2025-12-16 10:59:35--  https://huggingface.co/datasets/davidscripka/openwakeword_features/resolve/main/validation_set_features.npy\n",
       "Resolving huggingface.co (huggingface.co)... 52.222.136.38, 52.222.136.92, 52.222.136.89, ...\n",
@@ -708,11 +731,11 @@
       "Connecting to cas-bridge.xethub.hf.co (cas-bridge.xethub.hf.co)|54.192.35.69|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 184836608 (176M)\n",
-      "Saving to: ‘validation_set_features.npy’\n",
+      "Saving to: \u2018validation_set_features.npy\u2019\n",
       "\n",
       "validation_set_feat 100%[===================>] 176.27M   107MB/s    in 1.6s    \n",
       "\n",
-      "2025-12-16 10:59:37 (107 MB/s) - ‘validation_set_features.npy’ saved [184836608/184836608]\n",
+      "2025-12-16 10:59:37 (107 MB/s) - \u2018validation_set_features.npy\u2019 saved [184836608/184836608]\n",
       "\n"
      ]
     }
