refactor: update Audioset dataset loading to use parquet files and improve audio conversion process

--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -628,7 +628,7 @@
     "## Download noise and background audio\n",
     "\n",
     "# Audioset Dataset (https://research.google.com/audioset/dataset/index.html)\n",
-    "# Download one part of the audioset .tar files, extract, and convert to 16khz\n",
+    "# Download one shard of the audioset parquet files and convert to 16khz\n",
     "# For full-scale training, it's recommended to download the entire dataset from\n",
     "# https://huggingface.co/datasets/agkphysics/AudioSet, and\n",
     "# even potentially combine it with other background noise datasets (e.g., FSD50k, Freesound, etc.)\n",
@@ -636,45 +636,46 @@
     "if not os.path.exists(\"audioset\"):\n",
     "    os.mkdir(\"audioset\")\n",
     "\n",
-    "from huggingface_hub import hf_hub_download, list_repo_files\n",
-    "import tarfile\n",
+    "from datasets import load_dataset\n",
     "\n",
     "repo_id = \"agkphysics/AudioSet\"\n",
-    "repo_type = \"dataset\"\n",
-    "fname = \"bal_train09.tar\"\n",
-    "candidate = f\"data/{fname}\"\n",
-    "\n",
-    "files = list_repo_files(repo_id, repo_type=repo_type)\n",
-    "if candidate not in files:\n",
-    "    matches = [f for f in files if f.startswith(\"data/\") and \"bal_train09\" in f]\n",
-    "    if matches:\n",
-    "        candidate = matches[0]\n",
-    "        fname = os.path.basename(candidate)\n",
-    "    else:\n",
-    "        raise FileNotFoundError(\n",
-    "            f\"{candidate} not found in {repo_id}.\"\n",
-    "        )\n",
-    "\n",
-    "tar_path = hf_hub_download(\n",
-    "    repo_id=repo_id,\n",
-    "    repo_type=repo_type,\n",
-    "    filename=candidate,\n",
-    "    local_dir=\"audioset\",\n",
-    "    local_dir_use_symlinks=False,\n",
-    ")\n",
-    "with tarfile.open(tar_path, \"r\") as tar:\n",
-    "    tar.extractall(\"audioset\")\n",
+    "# The dataset is stored as parquet shards now (not tar files).\n",
+    "shard_id = \"09\"\n",
+    "data_file = f\"data/bal_train/{shard_id}.parquet\"\n",
     "\n",
     "output_dir = \"./audioset_16k\"\n",
     "if not os.path.exists(output_dir):\n",
     "    os.mkdir(output_dir)\n",
     "\n",
     "# Convert audioset files to 16khz sample rate\n",
-    "audioset_dataset = datasets.Dataset.from_dict({\"audio\": [str(i) for i in Path(\"audioset/audio\").glob(\"**/*.flac\")]})\n",
-    "audioset_dataset = audioset_dataset.cast_column(\"audio\", datasets.Audio(sampling_rate=16000))\n",
-    "for row in tqdm(audioset_dataset):\n",
-    "    name = row['audio']['path'].split('/')[-1].replace(\".flac\", \".wav\")\n",
-    "    scipy.io.wavfile.write(os.path.join(output_dir, name), 16000, (row['audio']['array']*32767).astype(np.int16))\n",
+    "audioset_dataset = load_dataset(\n",
+    "    repo_id,\n",
+    "    data_files={\"train\": data_file},\n",
+    "    split=\"train\",\n",
+    "    streaming=True,\n",
+    ")\n",
+    "\n",
+    "audio_col = None\n",
+    "for name, feat in audioset_dataset.features.items():\n",
+    "    if isinstance(feat, datasets.Audio):\n",
+    "        audio_col = name\n",
+    "        break\n",
+    "if audio_col is None:\n",
+    "    raise ValueError(\"No audio column found in AudioSet dataset.\")\n",
+    "\n",
+    "audioset_dataset = audioset_dataset.cast_column(audio_col, datasets.Audio(sampling_rate=16000))\n",
+    "for i, row in enumerate(tqdm(audioset_dataset)):\n",
+    "    audio = row[audio_col]\n",
+    "    if audio.get(\"path\"):\n",
+    "        stem = os.path.splitext(os.path.basename(audio[\"path\"]))[0]\n",
+    "    else:\n",
+    "        stem = f\"audioset_{i:06d}\"\n",
+    "    name = f\"{stem}.wav\"\n",
+    "    scipy.io.wavfile.write(\n",
+    "        os.path.join(output_dir, name),\n",
+    "        16000,\n",
+    "        (audio[\"array\"] * 32767).astype(np.int16),\n",
+    "    )\n",
     "\n",
     "# Free Music Archive dataset (https://github.com/mdeff/fma)\n",
     "output_dir = \"./fma\"\n",
