--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -421,41 +421,42 @@
     }
    ],
    "source": [
-    "## Environment setup\n",
-    "\n",
-    "# install piper-sample-generator (currently only supports linux systems)\n",
-    "!git clone https://github.com/rhasspy/piper-sample-generator\n",
-    "!wget -O piper-sample-generator/models/en_US-libritts_r-medium.pt 'https://github.com/rhasspy/piper-sample-generator/releases/download/v2.0.0/en_US-libritts_r-medium.pt'\n",
-    "!pip install piper-phonemize\n",
-    "!pip install webrtcvad\n",
-    "\n",
-    "# install openwakeword (full installation to support training)\n",
-    "!git clone https://github.com/dscripka/openwakeword\n",
-    "!pip install -e ./openwakeword\n",
-    "!cd openwakeword\n",
-    "\n",
-    "# install other dependencies\n",
-    "!pip install mutagen==1.47.0\n",
-    "!pip install torchinfo==1.8.0\n",
-    "!pip install torchmetrics==1.2.0\n",
-    "!pip install speechbrain==0.5.14\n",
-    "!pip install audiomentations==0.33.0\n",
-    "!pip install torch-audiomentations==0.11.0\n",
-    "!pip install acoustics==0.2.6\n",
-    "!pip install tensorflow-cpu==2.8.1\n",
-    "!pip install tensorflow_probability==0.16.0\n",
-    "!pip install onnx_tf==1.10.0\n",
-    "!pip install pronouncing==0.2.0\n",
-    "!pip install datasets==2.14.6\n",
-    "!pip install deep-phonemizer==0.0.19\n",
-    "\n",
-    "# Download required models (workaround for Colab)\n",
-    "import os\n",
-    "os.makedirs(\"./openwakeword/openwakeword/resources/models\")\n",
-    "!wget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/embedding_model.onnx -O ./openwakeword/openwakeword/resources/models/embedding_model.onnx\n",
-    "!wget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/embedding_model.tflite -O ./openwakeword/openwakeword/resources/models/embedding_model.tflite\n",
-    "!wget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/melspectrogram.onnx -O ./openwakeword/openwakeword/resources/models/melspectrogram.onnx\n",
-    "!wget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/melspectrogram.tflite -O ./openwakeword/openwakeword/resources/models/melspectrogram.tflite\n"
+    "## Environment setup",
+    "",
+    "# install piper-sample-generator (currently only supports linux systems)",
+    "!git clone https://github.com/rhasspy/piper-sample-generator",
+    "!wget -O piper-sample-generator/models/en_US-libritts_r-medium.pt 'https://github.com/rhasspy/piper-sample-generator/releases/download/v2.0.0/en_US-libritts_r-medium.pt'",
+    "!pip install piper-phonemize",
+    "!pip install webrtcvad",
+    "",
+    "# install openwakeword (full installation to support training)",
+    "!git clone https://github.com/dscripka/openwakeword",
+    "!pip install -e ./openwakeword",
+    "!cd openwakeword",
+    "",
+    "# install other dependencies",
+    "!pip install mutagen==1.47.0",
+    "!pip install torchinfo==1.8.0",
+    "!pip install torchmetrics==1.2.0",
+    "!pip install speechbrain==0.5.14",
+    "!pip install audiomentations==0.33.0",
+    "!pip install torch-audiomentations==0.11.0",
+    "!pip install acoustics==0.2.6",
+    "!pip install tensorflow-cpu>=2.12.0",
+    "!pip install tensorflow_probability==0.16.0",
+    "!pip install onnx_tf==1.10.0",
+    "!pip install pronouncing==0.2.0",
+    "!pip install datasets==2.14.6 pyarrow>=22.0.0",
+    "!pip install deep-phonemizer==0.0.19",
+    "",
+    "# Download required models (workaround for Colab)",
+    "import os",
+    "os.makedirs(\"./openwakeword/openwakeword/resources/models\", exist_ok=True)",
+    "!wget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/embedding_model.onnx -O ./openwakeword/openwakeword/resources/models/embedding_model.onnx",
+    "!wget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/embedding_model.tflite -O ./openwakeword/openwakeword/resources/models/embedding_model.tflite",
+    "!wget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/melspectrogram.onnx -O ./openwakeword/openwakeword/resources/models/melspectrogram.onnx",
+    "!wget https://github.com/dscripka/openWakeWord/releases/download/v0.5.1/melspectrogram.tflite -O ./openwakeword/openwakeword/resources/models/melspectrogram.tflite",
+    ""
    ]
   },
   {
@@ -633,19 +634,18 @@
     "# https://huggingface.co/datasets/agkphysics/AudioSet, and\n",
     "# even potentially combine it with other background noise datasets (e.g., FSD50k, Freesound, etc.)\n",
     "\n",
-    "if not os.path.exists(\"audioset\"):\n",
-    "    os.mkdir(\"audioset\")\n",
-    "\n",
     "from datasets import load_dataset\n",
+    "\n",
+    "audioset_dir = Path(\"audioset\")\n",
+    "audioset_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "repo_id = \"agkphysics/AudioSet\"\n",
     "# The dataset is stored as parquet shards now (not tar files).\n",
     "shard_id = \"09\"\n",
     "data_file = f\"data/bal_train/{shard_id}.parquet\"\n",
     "\n",
-    "output_dir = \"./audioset_16k\"\n",
-    "if not os.path.exists(output_dir):\n",
-    "    os.mkdir(output_dir)\n",
+    "output_dir = Path(\"audioset_16k\")\n",
+    "output_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Convert audioset files to 16khz sample rate\n",
     "audioset_dataset = load_dataset(\n",
@@ -667,31 +667,36 @@
     "for i, row in enumerate(tqdm(audioset_dataset)):\n",
     "    audio = row[audio_col]\n",
     "    if audio.get(\"path\"):\n",
-    "        stem = os.path.splitext(os.path.basename(audio[\"path\"]))[0]\n",
+    "        stem = Path(audio[\"path\"]).stem\n",
     "    else:\n",
     "        stem = f\"audioset_{i:06d}\"\n",
-    "    name = f\"{stem}.wav\"\n",
+    "    name = output_dir / f\"{stem}.wav\"\n",
     "    scipy.io.wavfile.write(\n",
-    "        os.path.join(output_dir, name),\n",
+    "        name,\n",
     "        16000,\n",
     "        (audio[\"array\"] * 32767).astype(np.int16),\n",
     "    )\n",
     "\n",
     "# Free Music Archive dataset (https://github.com/mdeff/fma)\n",
-    "output_dir = \"./fma\"\n",
-    "if not os.path.exists(output_dir):\n",
-    "    os.mkdir(output_dir)\n",
+    "fma_dir = Path(\"fma\")\n",
+    "fma_dir.mkdir(parents=True, exist_ok=True)\n",
     "fma_dataset = datasets.load_dataset(\"rudraml/fma\", name=\"small\", split=\"train\", streaming=True)\n",
     "fma_dataset = iter(fma_dataset.cast_column(\"audio\", datasets.Audio(sampling_rate=16000)))\n",
     "\n",
     "n_hours = 1  # use only 1 hour of clips for this example notebook, recommend increasing for full-scale training\n",
     "for i in tqdm(range(n_hours*3600//30)):  # this works because the FMA dataset is all 30 second clips\n",
     "    row = next(fma_dataset)\n",
-    "    name = row['audio']['path'].split('/')[-1].replace(\".mp3\", \".wav\")\n",
-    "    scipy.io.wavfile.write(os.path.join(output_dir, name), 16000, (row['audio']['array']*32767).astype(np.int16))\n",
+    "    audio_path = row[\"audio\"].get(\"path\")\n",
+    "    if audio_path:\n",
+    "        stem = Path(audio_path).stem\n",
+    "    else:\n",
+    "        stem = f\"fma_{i:06d}\"\n",
+    "    name = fma_dir / f\"{stem}.wav\"\n",
+    "    scipy.io.wavfile.write(name, 16000, (row['audio']['array']*32767).astype(np.int16))\n",
     "    i += 1\n",
     "    if i == n_hours*3600//30:\n",
-    "        break\n"
+    "        break\n",
+    "\n"
    ]
   },
   {
@@ -840,8 +845,10 @@
    ],
    "source": [
     "# Load default YAML config file for training\n",
-    "config = yaml.load(open(\"/home/stud/j/js490/openWakeWord/examples/custom_model.yml\", 'r').read(), yaml.Loader)\n",
-    "config"
+    "config_path = Path('..') / 'examples' / 'custom_model.yml'\n",
+    "config = yaml.safe_load(config_path.read_text())\n",
+    "config\n",
+    "\n"
    ]
   },
   {
@@ -871,8 +878,12 @@
     "config[\"false_positive_validation_data_path\"] = \"validation_set_features.npy\"\n",
     "config[\"feature_data_files\"] = {\"ACAV100M_sample\": \"openwakeword_features_ACAV100M_2000_hrs_16bit.npy\"}\n",
     "\n",
+    "output_dir = Path(config[\"output_dir\"])\n",
+    "output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "with open('my_model.yaml', 'w') as file:\n",
-    "    documents = yaml.dump(config, file)"
+    "    yaml.dump(config, file)\n",
+    "\n"
    ]
   },
   {
