refactor: enhance error handling and package installation instructions in automatic model training notebook

--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -128,10 +128,23 @@
             "outputs": [],
             "source": [
                 "# Debugging\n",
-                "import sys, pyarrow\n",
+                "import sys\n",
                 "print(\"python:\", sys.executable)\n",
-                "print(\"pyarrow version:\", pyarrow.__version__)\n",
-                "print(\"pyarrow path:\", pyarrow.__file__)"
+                "\n",
+                "try:\n",
+                "    import pyarrow\n",
+                "    print(\"pyarrow version:\", pyarrow.__version__)\n",
+                "    print(\"pyarrow path:\", pyarrow.__file__)\n",
+                "except ImportError as e:\n",
+                "    print(\"ERROR: pyarrow not installed:\", e)\n",
+                "    print(\"Please install pyarrow: pip install pyarrow>=14\")\n",
+                "\n",
+                "try:\n",
+                "    import datasets\n",
+                "    print(\"datasets version:\", datasets.__version__)\n",
+                "except ImportError as e:\n",
+                "    print(\"ERROR: datasets not installed:\", e)\n",
+                "    print(\"Please install datasets: pip install datasets>=2.20.0\")"
             ]
         },
         {
@@ -200,7 +213,9 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "pip -q install -U \"datasets\" \"huggingface_hub\" \"fsspec\" \"pyarrow\" \"aiohttp\" \"soundfile\""
+                "# Install/upgrade required packages for HuggingFace datasets\n",
+                "# Note: Run this cell once, then restart kernel if needed\n",
+                "%pip install -q -U \"datasets>=2.20.0\" \"huggingface_hub>=0.24.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"aiohttp\" \"soundfile\" \"packaging\""
             ]
         },
         {
@@ -210,8 +225,11 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "pip -q uninstall -y huggingface-hub huggingface_hub datasets\n",
-                "pip -q install --no-cache-dir --force-reinstall \"huggingface_hub>=0.24.0\" \"datasets>=2.20.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"packaging\""
+                "# This cell is kept for reference - use Cell 11 instead\n",
+                "# If you encounter issues, you can uncomment and run this to force reinstall:\n",
+                "# %pip uninstall -y huggingface-hub huggingface_hub datasets pyarrow\n",
+                "# %pip install --no-cache-dir --force-reinstall \"huggingface_hub>=0.24.0\" \"datasets>=2.20.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"packaging\"\n",
+                "# Then restart kernel"
             ]
         },
         {
@@ -250,10 +268,6 @@
             },
             "outputs": [],
             "source": [
-                "# If you see \"must be called with a dataclass type or instance\", upgrade these first:\n",
-                "# (Run once, then restart kernel)\n",
-                "# %pip -q install -U datasets huggingface_hub pyarrow soundfile tqdm scipy\n",
-                "\n",
                 "from pathlib import Path\n",
                 "import itertools\n",
                 "import numpy as np\n",
@@ -268,47 +282,89 @@
                 "# -------------------------\n",
                 "\n",
                 "# AudioSet (parquet shard on HF)\n",
+                "# Using direct URL to parquet file from HuggingFace Hub\n",
                 "repo_id = \"agkphysics/AudioSet\"\n",
                 "shard_id = \"09\"\n",
-                "data_file = f\"data/bal_train/{shard_id}.parquet\"\n",
+                "# Construct the direct URL to the parquet file\n",
+                "parquet_url = f\"https://huggingface.co/datasets/{repo_id}/resolve/main/data/bal_train/{shard_id}.parquet\"\n",
                 "\n",
                 "output_dir = Path(\"audioset_16k\")\n",
                 "output_dir.mkdir(parents=True, exist_ok=True)\n",
                 "\n",
-                "# Robust: load the parquet file directly from the hub (bypasses dataset builder issues)\n",
-                "parquet_path = f\"hf://datasets/{repo_id}/{data_file}\"\n",
-                "audioset_dataset = load_dataset(\n",
-                "    \"parquet\",\n",
-                "    data_files=parquet_path,\n",
-                "    split=\"train\",\n",
-                "    streaming=True,\n",
-                ")\n",
-                "\n",
-                "# Find the audio column (it may be named \"audio\", but we detect it safely)\n",
-                "audio_col = None\n",
-                "for name, feat in audioset_dataset.features.items():\n",
-                "    if isinstance(feat, datasets.Audio):\n",
-                "        audio_col = name\n",
-                "        break\n",
-                "if audio_col is None:\n",
-                "    # sometimes it's stored as a dict-like column; try the common default\n",
-                "    if \"audio\" in audioset_dataset.features:\n",
-                "        audio_col = \"audio\"\n",
-                "    else:\n",
-                "        raise ValueError(f\"No audio column found. Columns: {list(audioset_dataset.features.keys())}\")\n",
-                "\n",
-                "# Cast/Decode audio to 16kHz\n",
-                "audioset_dataset = audioset_dataset.cast_column(audio_col, datasets.Audio(sampling_rate=16000))\n",
-                "\n",
-                "# IMPORTANT: the shard can still be big; limit how many files you convert if needed\n",
-                "max_items = 2000  # change or set to None to do all (can take a while + lots of disk)\n",
-                "iterator = audioset_dataset if max_items is None else itertools.islice(audioset_dataset, max_items)\n",
-                "\n",
-                "for i, row in enumerate(tqdm(iterator, total=(max_items or None), desc=\"AudioSet -> 16k wav\")):\n",
-                "    audio = row[audio_col]\n",
-                "    stem = Path(audio.get(\"path\", \"\")).stem if audio.get(\"path\") else f\"audioset_{i:06d}\"\n",
-                "    out_path = output_dir / f\"{stem}.wav\"\n",
-                "    scipy.io.wavfile.write(out_path, 16000, (audio[\"array\"] * 32767).astype(np.int16))\n",
+                "try:\n",
+                "    # Try loading parquet file directly using URL\n",
+                "    print(f\"Loading AudioSet parquet file from: {parquet_url}\")\n",
+                "    audioset_dataset = load_dataset(\n",
+                "        \"parquet\",\n",
+                "        data_files=parquet_url,\n",
+                "        split=\"train\",\n",
+                "        streaming=True,\n",
+                "    )\n",
+                "    \n",
+                "    # Find the audio column (it may be named \"audio\", but we detect it safely)\n",
+                "    audio_col = None\n",
+                "    for name, feat in audioset_dataset.features.items():\n",
+                "        if isinstance(feat, datasets.Audio):\n",
+                "            audio_col = name\n",
+                "            break\n",
+                "    if audio_col is None:\n",
+                "        # sometimes it's stored as a dict-like column; try the common default\n",
+                "        if \"audio\" in audioset_dataset.features:\n",
+                "            audio_col = \"audio\"\n",
+                "        else:\n",
+                "            # Try to inspect first row to find audio column\n",
+                "            first_row = next(iter(audioset_dataset))\n",
+                "            for key in first_row.keys():\n",
+                "                if isinstance(first_row[key], dict) and \"array\" in first_row[key]:\n",
+                "                    audio_col = key\n",
+                "                    break\n",
+                "            if audio_col is None:\n",
+                "                raise ValueError(f\"No audio column found. Columns: {list(audioset_dataset.features.keys())}\")\n",
+                "    \n",
+                "    print(f\"Found audio column: {audio_col}\")\n",
+                "    \n",
+                "    # Cast/Decode audio to 16kHz\n",
+                "    audioset_dataset = audioset_dataset.cast_column(audio_col, datasets.Audio(sampling_rate=16000))\n",
+                "    \n",
+                "    # IMPORTANT: the shard can still be big; limit how many files you convert if needed\n",
+                "    max_items = 2000  # change or set to None to do all (can take a while + lots of disk)\n",
+                "    iterator = audioset_dataset if max_items is None else itertools.islice(audioset_dataset, max_items)\n",
+                "    \n",
+                "    for i, row in enumerate(tqdm(iterator, total=(max_items or None), desc=\"AudioSet -> 16k wav\")):\n",
+                "        audio = row[audio_col]\n",
+                "        # After cast_column, audio should be a dict with \"array\" and \"path\" keys\n",
+                "        if isinstance(audio, dict):\n",
+                "            audio_array = audio.get(\"array\")\n",
+                "            audio_path = audio.get(\"path\", \"\")\n",
+                "            if audio_array is None:\n",
+                "                print(f\"Warning: No audio array found in row {i}, skipping...\")\n",
+                "                continue\n",
+                "        else:\n",
+                "            # Fallback: if it's not a dict, assume it's already the array\n",
+                "            audio_array = audio\n",
+                "            audio_path = \"\"\n",
+                "            \n",
+                "        stem = Path(audio_path).stem if audio_path else f\"audioset_{i:06d}\"\n",
+                "        out_path = output_dir / f\"{stem}.wav\"\n",
+                "        scipy.io.wavfile.write(out_path, 16000, (audio_array * 32767).astype(np.int16))\n",
+                "        \n",
+                "except Exception as e:\n",
+                "    print(f\"Error loading AudioSet: {e}\")\n",
+                "    print(\"Trying alternative method...\")\n",
+                "    # Alternative: try loading the dataset directly if it's available\n",
+                "    try:\n",
+                "        audioset_dataset = load_dataset(repo_id, split=f\"train[{shard_id}]\", streaming=True)\n",
+                "        audioset_dataset = audioset_dataset.cast_column(\"audio\", datasets.Audio(sampling_rate=16000))\n",
+                "        max_items = 2000\n",
+                "        iterator = itertools.islice(audioset_dataset, max_items)\n",
+                "        for i, row in enumerate(tqdm(iterator, total=max_items, desc=\"AudioSet -> 16k wav\")):\n",
+                "            audio = row[\"audio\"]\n",
+                "            stem = Path(audio.get(\"path\", \"\")).stem if audio.get(\"path\") else f\"audioset_{i:06d}\"\n",
+                "            out_path = output_dir / f\"{stem}.wav\"\n",
+                "            scipy.io.wavfile.write(out_path, 16000, (audio[\"array\"] * 32767).astype(np.int16))\n",
+                "    except Exception as e2:\n",
+                "        print(f\"Alternative method also failed: {e2}\")\n",
+                "        print(\"Skipping AudioSet download. You may need to download manually or check dataset availability.\")\n",
                 "\n",
                 "\n",
                 "# -------------------------\n",
@@ -317,17 +373,22 @@
                 "fma_dir = Path(\"fma\")\n",
                 "fma_dir.mkdir(parents=True, exist_ok=True)\n",
                 "\n",
-                "fma_dataset = load_dataset(\"rudraml/fma\", name=\"small\", split=\"train\", streaming=True)\n",
-                "fma_dataset = fma_dataset.cast_column(\"audio\", datasets.Audio(sampling_rate=16000))\n",
-                "\n",
-                "n_hours = 1  # FMA small clips are ~30s each\n",
-                "n_items = n_hours * 3600 // 30\n",
-                "\n",
-                "for i, row in enumerate(tqdm(itertools.islice(fma_dataset, n_items), total=n_items, desc=\"FMA -> 16k wav\")):\n",
-                "    audio = row[\"audio\"]\n",
-                "    stem = Path(audio.get(\"path\", \"\")).stem if audio.get(\"path\") else f\"fma_{i:06d}\"\n",
-                "    out_path = fma_dir / f\"{stem}.wav\"\n",
-                "    scipy.io.wavfile.write(out_path, 16000, (audio[\"array\"] * 32767).astype(np.int16))\n",
+                "try:\n",
+                "    print(\"Loading FMA dataset...\")\n",
+                "    fma_dataset = load_dataset(\"rudraml/fma\", name=\"small\", split=\"train\", streaming=True)\n",
+                "    fma_dataset = fma_dataset.cast_column(\"audio\", datasets.Audio(sampling_rate=16000))\n",
+                "    \n",
+                "    n_hours = 1  # FMA small clips are ~30s each\n",
+                "    n_items = n_hours * 3600 // 30\n",
+                "    \n",
+                "    for i, row in enumerate(tqdm(itertools.islice(fma_dataset, n_items), total=n_items, desc=\"FMA -> 16k wav\")):\n",
+                "        audio = row[\"audio\"]\n",
+                "        stem = Path(audio.get(\"path\", \"\")).stem if audio.get(\"path\") else f\"fma_{i:06d}\"\n",
+                "        out_path = fma_dir / f\"{stem}.wav\"\n",
+                "        scipy.io.wavfile.write(out_path, 16000, (audio[\"array\"] * 32767).astype(np.int16))\n",
+                "except Exception as e:\n",
+                "    print(f\"Error loading FMA dataset: {e}\")\n",
+                "    print(\"Skipping FMA download. You may need to check dataset availability.\")\n",
                 "\n"
             ]
         },
