refactor: improve error handling and installation instructions for datasets and packaging in automatic model training notebook

--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -138,13 +138,25 @@
                 "except ImportError as e:\n",
                 "    print(\"ERROR: pyarrow not installed:\", e)\n",
                 "    print(\"Please install pyarrow: pip install pyarrow>=14\")\n",
+                "except Exception as e:\n",
+                "    print(\"ERROR loading pyarrow:\", type(e).__name__, str(e))\n",
                 "\n",
                 "try:\n",
                 "    import datasets\n",
                 "    print(\"datasets version:\", datasets.__version__)\n",
                 "except ImportError as e:\n",
                 "    print(\"ERROR: datasets not installed:\", e)\n",
-                "    print(\"Please install datasets: pip install datasets>=2.20.0\")"
+                "    print(\"Please install datasets: pip install datasets>=2.20.0\")\n",
+                "except TypeError as e:\n",
+                "    if \"NoneType\" in str(e) or \"packaging\" in str(e).lower():\n",
+                "        print(\"ERROR: Version compatibility issue between datasets and packaging\")\n",
+                "        print(\"Try: pip install 'datasets>=2.20.0,<3.0' 'packaging>=24.0' --force-reinstall\")\n",
+                "        print(\"Or: pip install 'datasets==2.20.0' 'packaging>=24.0' --force-reinstall\")\n",
+                "    else:\n",
+                "        print(\"ERROR loading datasets:\", type(e).__name__, str(e))\n",
+                "except Exception as e:\n",
+                "    print(\"ERROR loading datasets:\", type(e).__name__, str(e))\n",
+                "    print(\"Full error:\", e)"
             ]
         },
         {
@@ -215,7 +227,8 @@
             "source": [
                 "# Install/upgrade required packages for HuggingFace datasets\n",
                 "# Note: Run this cell once, then restart kernel if needed\n",
-                "%pip install -q -U \"datasets>=2.20.0\" \"huggingface_hub>=0.24.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"aiohttp\" \"soundfile\" \"packaging\""
+                "# Using compatible version ranges to avoid NumPy 2.x and packaging issues\n",
+                "%pip install -q -U \"numpy<2\" \"datasets>=2.20.0,<3.0\" \"huggingface_hub>=0.24.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"aiohttp\" \"soundfile\" \"packaging>=24.0\""
             ]
         },
         {
