--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -145,8 +145,14 @@
                 "    import datasets\n",
                 "    print(\"datasets version:\", datasets.__version__)\n",
                 "except ImportError as e:\n",
-                "    print(\"ERROR: datasets not installed:\", e)\n",
-                "    print(\"Please install datasets: pip install datasets>=2.20.0\")\n",
+                "    error_msg = str(e)\n",
+                "    if \"HfFolder\" in error_msg or \"cannot import name\" in error_msg:\n",
+                "        print(\"ERROR: Version incompatibility between datasets and huggingface_hub\")\n",
+                "        print(\"datasets 2.14.6 requires huggingface_hub < 0.20.0, but newer versions removed HfFolder\")\n",
+                "        print(\"Solution: pip install --force-reinstall 'datasets>=2.20.0,<3.0' 'huggingface_hub>=0.24.0'\")\n",
+                "    else:\n",
+                "        print(\"ERROR: datasets not installed:\", e)\n",
+                "        print(\"Please install datasets: pip install datasets>=2.20.0\")\n",
                 "except TypeError as e:\n",
                 "    if \"NoneType\" in str(e) or \"packaging\" in str(e).lower():\n",
                 "        print(\"ERROR: Version compatibility issue between datasets and packaging\")\n",
@@ -227,8 +233,9 @@
             "source": [
                 "# Install/upgrade required packages for HuggingFace datasets\n",
                 "# Note: Run this cell once, then restart kernel if needed\n",
-                "# Using compatible version ranges to avoid NumPy 2.x and packaging issues\n",
-                "%pip install -q -U \"numpy<2\" \"datasets>=2.20.0,<3.0\" \"huggingface_hub>=0.24.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"aiohttp\" \"soundfile\" \"packaging>=24.0\""
+                "# Using compatible version ranges to avoid NumPy 2.x, packaging, and HfFolder issues\n",
+                "# datasets 2.20.0+ works with huggingface_hub 0.24.0+ (HfFolder was removed in 0.20.0)\n",
+                "%pip install -q -U --force-reinstall \"numpy<2\" \"datasets>=2.20.0,<3.0\" \"huggingface_hub>=0.24.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"aiohttp\" \"soundfile\" \"packaging>=24.0\""
             ]
         },
         {
